# qmeq

./: .gitignore  ManyBodyFermiGoldenRule.md  QmeQ_implementation_notes.md  README.md  Theory.md  compare_scan_1D.py  compare_solvers.py  cpp_utils_.py  kernel_matrix_notes.md  notes_Pauli_QmeQ_to_Cpp.md  pauli_solver_lib.py  pyproject.toml  run_with_asan.sh  session_summary_ProbabilitesAndCurrent.md  setup.py  spinless_trimer1.py  spinless_trimer1_cpp.py
cpp/: gauss_solver.hpp  pauli_solver.hpp  pauli_solver_wrapper.cpp  print_utils.hpp  test_pauli_solver.cpp
qmeq/: config.py  indexing.py  leadstun.py  qdot.py
qmeq/approach/: aprclass.py  kernel_handler.py
qmeq/approach/base/: RTD.py  lindblad.py  neumann1.py  neumann2.py  pauli.py
qmeq/approach/elph/: pauli.py
qmeq/builder/: builder.py  builder_base.py  builder_elph.py
qmeq/wrappers/: c_mytypes.pxd
